# codon

./: .gitignore  CMakeLists.txt
cmake/: deps.cmake
codon/cir/llvm/: llvisitor.cpp
codon/compiler/: compiler.cpp
codon/parser/: abi_generator.cpp  abi_generator.h
codon/parser/ast/: stmt.cpp  stmt.h
codon/parser/visitors/simplify/: basic.cpp  class.cpp
codon/sir/llvm/: llvisitor.cpp
codon/util/: common.h
stdlib/: packer.codon
stdlib/internal/: __init__.codon  attributes.codon  c_stubs.codon  file.codon
stdlib/internal/types/: array.codon  intn.codon  str.codon
targets/wasm/: CMakeLists.txt  README.md
targets/wasm/demo/: CMakeLists.txt  README.md  action.codon  contract.codon  crypto.codon  hello.codon  internal.codon  main.c  name.codon  utils.codon
targets/wasm/runtime-wasi/: CMakeLists.txt  exc.cpp  lib.cpp  lib.h
